# fhmsg

./: README.md
src/c/: CMakeLists.txt  fhmsg_debug.h  fhmsg_err.h  handle_integer_field.c  handle_integer_field.h  handle_integer_field_err.h  handle_integer_field_test.c
src/c/bytes_codec/: CMakeLists.txt  bytes_codec_binary.c  bytes_codec_binary.h  bytes_codec_binary_test.c  bytes_codec_text.c  bytes_codec_text.h  bytes_codec_text_test.c  bytes_struct.c  bytes_struct.h
src/c/uint_codec/: CMakeLists.txt  uint_codec_binary.c  uint_codec_binary.h  uint_codec_binary_test.c  uint_codec_text.c  uint_codec_text.h  uint_codec_text_test.c
src/go/: go.mod  terminal_on_board_enum.c  terminal_on_board_enum.h  terminal_on_board_enum_err.h
src/go/handler_maker/: gen_uint_enum.go
src/go/test/: dummy_uint_enum_descriptor.json
src/go/uint_enum_handler_maker/: descriptor.go  generate_code.go  generate_header.go  generate_impl.go  generate_tests.go  template.go
src/python/osx_arm64/: pyvenv.cfg
